Bug 743099 - Add MPhis of |this| to the observable set. r=dvander